[project]
name = "passport-poster"
version = "0.1.0"
description = "Create beautiful posters from passport cover images organized by continent"
requires-python = ">=3.8"
dependencies = [
    "pillow>=10.0.0",
]

[project.optional-dependencies]
jupyter = [
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
